--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>WellBridge Social | Event & Conference Venue</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WellBridge Social | Event &amp; Conference Venue</title>
+  <meta name="description" content="WellBridge Social is a flexible event and conference venue in Birmingham, AL offering rental spaces for parties, showers, meetings, repasts, and more." />
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -11,17 +12,21 @@
   <!-- HEADER / NAV -->
   <header class="site-header">
     <div class="container header-inner">
-      <a href="#hero" class="logo">
-        <!-- change src to your actual logo file name -->
-        <img src="images/logo-wellbridge.png" alt="WellBridge Social logo" />
+      <a href="#hero" class="logo-link">
+        <!-- Make sure you have images/logo.png in your project -->
+        <img src="images/logo.png" alt="WellBridge Social logo" class="logo-image" />
       </a>
 
       <nav class="main-nav">
-        <a href="#hero">Home</a>
-        <a href="#previous-events">Previous Events</a>
-        <a href="#rentals">Rentals</a>
-        <a href="#how-it-started">How It Started</a>
-        <a href="#contact">Contact Us</a>
+        <ul>
+          <li><a href="#hero">Home</a></li>
+          <li><a href="#previous-events">Previous Events</a></li>
+          <li><a href="#rentals">Rentals</a></li>
+          <li><a href="#plan-your-event">Plan Your Event</a></li>
+          <li><a href="#faqs">FAQ&#39;s</a></li>
+          <li><a href="#how-it-started">How It Started</a></li>
+          <li><a href="#contact">Contact Us</a></li>
+        </ul>
       </nav>
     </div>
   </header>
@@ -32,7 +37,11 @@
       <div class="container hero-inner">
         <div class="hero-text">
           <p class="eyebrow">BIRMINGHAM, AL • FORESTDALE</p>
-          <h1>Beautiful, flexible space for your next event.</h1>
+          <h1>
+            Beautiful, flexible<br />
+            space for your next<br />
+            event.
+          </h1>
           <p class="hero-subtitle">
             Host showers, birthday parties, meetings, repasts, and more at WellBridge Social.
             Two rooms, simple pricing, and a welcoming atmosphere.
@@ -43,89 +52,197 @@
             <a href="#contact" class="btn btn-outline">Check Date Availability</a>
           </div>
 
-          <p class="hero-note">
+          <p class="hero-callout">
             Call or text <strong>205-504-6812</strong> to get started.
           </p>
         </div>
       </div>
     </section>
 
-    <!-- ABOUT -->
+    <!-- ABOUT / VENUE INTRO -->
     <section id="about" class="section">
+      <div class="container two-column">
+        <div>
+          <h2>Welcome to WellBridge Social</h2>
+          <p>
+            WellBridge Social is a locally owned event and conference venue in Birmingham, AL,
+            operated by <strong>Lynn Wilkerson</strong>. Our goal is to make hosting your event
+            simple, affordable, and stress-free.
+          </p>
+          <p>
+            With two flexible spaces, included tables and chairs, and optional linen rentals,
+            you can shape the room to match your colors, theme, and style. Bring your own planner
+            or work directly with Lynn to create the experience you’re imagining.
+          </p>
+        </div>
+
+        <aside class="card">
+          <h3>Venue Details</h3>
+          <ul>
+            <li><strong>Address:</strong> 1633 Forestdale Blvd, Birmingham, AL</li>
+            <li><strong>Phone:</strong> 205-504-6812</li>
+            <li>Two indoor event spaces (large + small)</li>
+            <li>Tables &amp; chairs included with all rentals</li>
+            <li>Optional linen and specialty cloths available</li>
+          </ul>
+        </aside>
+      </div>
+    </section>
+
+    <!-- RENTAL OPTIONS -->
+    <section id="rentals" class="section section-alt">
       <div class="container">
-        <h2>Welcome to WellBridge Social</h2>
-        <p>
-          WellBridge Social is a locally owned event and conference venue in Birmingham, AL,
-          operated by <strong>Lynn Wilkerson</strong>. Our goal is to make hosting your event simple,
-          affordable, and stress-free.
+        <h2>Rental Options</h2>
+        <p class="section-intro">
+          One simple structure: pricing is based on room size, time of day, and event length.
+          All rentals include standard tables and chairs.
         </p>
-        <p>
-          With two flexible spaces, included tables and chairs, and optional linen rentals,
-          you can shape the room to match your colors, theme, and style.
+
+        <div class="cards-grid">
+          <article class="card">
+            <h3>Large Room – Daytime</h3>
+            <p class="price">$700 / up to 8 hours</p>
+            <p>Ideal for up to 100 guests.</p>
+            <ul>
+              <li>9:00 AM – 5:00 PM</li>
+              <li>Tables &amp; chairs included</li>
+              <li>Decor setup time included within rental window</li>
+            </ul>
+          </article>
+
+          <article class="card">
+            <h3>Large Room – Evening</h3>
+            <p class="price">$900 / up to 8 hours</p>
+            <p>Ideal for up to 100 guests.</p>
+            <ul>
+              <li>Common times: 4–12, 5–1, 6–2</li>
+              <li>Great for receptions, parties, and repasts</li>
+              <li>Tables &amp; chairs included</li>
+            </ul>
+          </article>
+
+          <article class="card">
+            <h3>Small Room – Daytime</h3>
+            <p class="price">$600 / up to 8 hours</p>
+            <p>Ideal for up to 50 guests.</p>
+            <ul>
+              <li>9:00 AM – 5:00 PM</li>
+              <li>Perfect for showers, meetings, and trainings</li>
+              <li>Tables &amp; chairs included</li>
+            </ul>
+          </article>
+
+          <article class="card">
+            <h3>Small Room – Evening</h3>
+            <p class="price">$700 / up to 8 hours</p>
+            <p>Ideal for up to 50 guests.</p>
+            <ul>
+              <li>Common times: 4–12, 5–1, 6–2</li>
+              <li>Warm, intimate space for smaller celebrations</li>
+              <li>Tables &amp; chairs included</li>
+            </ul>
+          </article>
+        </div>
+
+        <p class="note">
+          Additional time is available at <strong>$100 per hour</strong>.
+          Setup and breakdown must be completed within your reserved time.
         </p>
       </div>
     </section>
 
-    <!-- PREVIOUS EVENTS / GALLERY (CMS-EDITABLE PART) -->
+    <!-- PLAN YOUR EVENT / SERVICES -->
+    <section id="plan-your-event" class="section">
+      <div class="container">
+        <h2>Plan Your Event at WellBridge Social</h2>
+        <p class="section-intro">
+          Whether you&#39;re hosting a birthday party, baby shower, graduation celebration,
+          repast, meeting, or training, our flexible space gives you room to create the event
+          you want.
+        </p>
+
+        <div class="cards-grid">
+          <article class="card">
+            <h3>What We Provide</h3>
+            <ul>
+              <li>60&quot; round and 6 ft tables</li>
+              <li>Folding chairs</li>
+              <li>Optional linen rentals</li>
+              <li>On-site restrooms</li>
+            </ul>
+          </article>
+
+          <article class="card">
+            <h3>Linen Rentals</h3>
+            <ul>
+              <li>Polyester tablecloths – $8 each</li>
+              <li>Chair covers &amp; sashes – $1 each</li>
+              <li>Overlays – $4 each</li>
+              <li>Runners – $3 each</li>
+              <li>Specialty cloths (sequin, rosette, etc.) – $15 each</li>
+            </ul>
+          </article>
+
+          <article class="card">
+            <h3>Alcohol &amp; Security</h3>
+            <p>
+              Serving alcohol for more than 50 guests? City of Adamsville requires a police
+              officer on site during your event.
+            </p>
+            <p>
+              Please contact <strong>205-674-5671</strong> to arrange payment and scheduling
+              directly with the City.
+            </p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- PREVIOUS EVENTS (COMING SOON) -->
     <section id="previous-events" class="section section-alt">
       <div class="container">
         <h2>Previous Events</h2>
         <p class="section-intro">
-          Photo gallery of events hosted at WellBridge Social.
+          Coming soon – photo gallery of events hosted at WellBridge Social.
         </p>
 
-        <!-- JS will inject CMS items here -->
-        <div id="gallery-grid" class="gallery-grid">
-          <p class="gallery-empty-message">
-            Gallery coming soon as we add photos from upcoming events.
-          </p>
+        <div class="card dashed">
+          <p>Gallery coming soon as we add photos from upcoming events.</p>
         </div>
       </div>
     </section>
 
-    <!-- RENTALS -->
-    <section id="rentals" class="section">
+    <!-- FAQS -->
+    <section id="faqs" class="section">
       <div class="container">
-        <h2>Rental Information</h2>
-
-        <div class="cards">
-          <article class="card">
-            <h3>Large Room</h3>
-            <p>Ideal for up to <strong>100 guests</strong>.</p>
-            <ul>
-              <li>Day events (9am–5pm): <strong>$700</strong></li>
-              <li>Evening events (4pm–12am / 5pm–1am / 6pm–2am): <strong>$900</strong></li>
-              <li>Includes tables &amp; chairs</li>
-            </ul>
+        <h2>FAQ&#39;s</h2>
+        <div class="faq-grid">
+          <article class="faq-item">
+            <h3>How do I reserve a date?</h3>
+            <p>
+              A signed rental agreement and a deposit of half your total balance are required
+              to hold your date. The remaining balance is due at least
+              <strong>5 calendar days</strong> before your event.
+            </p>
           </article>
 
-          <article class="card">
-            <h3>Small Room</h3>
-            <p>Ideal for up to <strong>50 guests</strong>.</p>
-            <ul>
-              <li>Day events (9am–5pm): <strong>$600</strong></li>
-              <li>Evening events (4pm–12am / 5pm–1am / 6pm–2am): <strong>$700</strong></li>
-              <li>Includes tables &amp; chairs</li>
-            </ul>
+          <article class="faq-item">
+            <h3>Is there a cleaning fee?</h3>
+            <p>
+              A <strong>$100 clean-up deposit</strong> is collected before your event and
+              returned promptly once the room is left clean. Floors and tables must be clear
+              of debris, and all trash placed in the provided cans.
+            </p>
           </article>
 
-          <article class="card">
-            <h3>Linen &amp; Extras</h3>
-            <ul>
-              <li>Polyester tablecloths: <strong>$8</strong> each</li>
-              <li>Chair covers &amp; sashes: <strong>$1</strong> each</li>
-              <li>Overlays: <strong>$4</strong> each</li>
-              <li>Specialty cloths (sequin/rosette): <strong>$15</strong> each</li>
-            </ul>
-            <p>We set up and break down all rented linen for you.</p>
+          <article class="faq-item">
+            <h3>Can I bring my own decorations?</h3>
+            <p>
+              Yes. You&#39;re welcome to decorate the space to match your theme.
+              Please plan your setup and breakdown within your rental time.
+            </p>
           </article>
         </div>
-
-        <p class="small-note">
-          All rental prices are for up to <strong>8 hours</strong>. Additional time is
-          <strong>$100 per hour</strong>. Cleanup deposit: <strong>$100</strong> (refunded when the
-          room is left clean and trash removed).
-        </p>
       </div>
     </section>
 
@@ -134,19 +251,22 @@
       <div class="container">
         <h2>How It Started</h2>
         <p>
-          WellBridge Social was created to give families in the Birmingham / Forestdale area
-          a beautiful, flexible space for life’s celebrations — without the stress and hidden fees
-          of larger venues.
+          WellBridge Social was created by Lynn Wilkerson to provide Birmingham-area families,
+          businesses, and churches with a warm, affordable space for meaningful gatherings.
+          From showers and birthdays to repasts and meetings, our heart is to make hosting
+          easier so you can focus on the people who matter most.
         </p>
       </div>
     </section>
 
     <!-- CONTACT -->
     <section id="contact" class="section">
-      <div class="container contact-layout">
-        <div class="contact-form">
+      <div class="container two-column">
+        <div>
           <h2>Contact Us</h2>
-          <p>Ready to check a date or ask a question? Reach out below.</p>
+          <p>
+            Ready to check a date or ask a question? Reach out below.
+          </p>
 
           <!-- Netlify form -->
           <form
@@ -154,57 +274,59 @@
             method="POST"
             data-netlify="true"
             action="/thank_you.html"
+            class="contact-form"
           >
             <input type="hidden" name="form-name" value="contact" />
 
-            <label>
-              Name
-              <input type="text" name="name" required />
-            </label>
+            <div class="field">
+              <label for="name">Name</label>
+              <input id="name" name="name" type="text" required />
+            </div>
 
-            <label>
-              Email
-              <input type="email" name="email" required />
-            </label>
+            <div class="field">
+              <label for="email">Email</label>
+              <input id="email" name="email" type="email" required />
+            </div>
 
-            <label>
-              Phone
-              <input type="tel" name="phone" />
-            </label>
+            <div class="field">
+              <label for="phone">Phone</label>
+              <input id="phone" name="phone" type="tel" />
+            </div>
 
-            <label>
-              Event Type
-              <input type="text" name="event_type" placeholder="Birthday, shower, meeting, repast, etc." />
-            </label>
+            <div class="field">
+              <label for="eventtype">Event Type</label>
+              <input
+                id="eventtype"
+                name="eventtype"
+                type="text"
+                placeholder="Birthday, shower, meeting, repast, etc."
+              />
+            </div>
 
-            <label>
-              Event Details
+            <div class="field">
+              <label for="message">Event Details</label>
               <textarea
+                id="message"
                 name="message"
                 rows="4"
                 placeholder="Date, time frame, guest count, room size (large/small), and any questions."
+                required
               ></textarea>
-            </label>
+            </div>
 
             <button type="submit" class="btn btn-primary">Send Message</button>
           </form>
         </div>
 
-        <div class="contact-info">
+        <aside class="card contact-info">
           <h3>Venue Information</h3>
           <p><strong>WellBridge Social</strong></p>
           <p>1633 Forestdale Blvd<br />Birmingham, AL</p>
-
-          <p>
-            <strong>Phone:</strong>
-            <br />
-            205-504-6812
-          </p>
-
+          <p><strong>Phone:</strong> 205-504-6812</p>
           <p>
             Please include your date and estimated guest count for a quicker response.
           </p>
-        </div>
+        </aside>
       </div>
     </section>
   </main>
@@ -214,23 +336,12 @@
     <div class="container">
       <p>&copy; <span id="year"></span> WellBridge Social. All rights reserved.</p>
     </div>
+    <script>
+      // simple year script
+      document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
   </footer>
 
-  <!-- NETLIFY IDENTITY + SITE JS -->
-  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   <script src="script.js"></script>
-
-  <script>
-    // Identity: if user logs in, send them to the CMS
-    if (window.netlifyIdentity) {
-      window.netlifyIdentity.on("init", (user) => {
-        if (!user) {
-          window.netlifyIdentity.on("login", () => {
-            document.location.href = "/admin/";
-          });
-        }
-      });
-    }
-  </script>
 </body>
 </html>
